--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -1553,12 +1553,12 @@ body {
 }
 .meet__item {
   padding: 25px;
-  width: 405px;
+  width: 32%;
   background: #F9F9F9;
 }
 .meet__item_big {
   margin-bottom: 80px;
-  width: 645px;
+  width: 49.62%;
 }
 .meet__icon {
   display: -webkit-box;
@@ -2096,10 +2096,6 @@ body {
   background-image: url(../img/arrow_black.svg);
 }
 
-.meet {
-  display: none;
-}
-
 @media (max-width: 1500px) {
   .promo__left img {
     height: 100%;
@@ -2215,6 +2211,16 @@ body {
   }
   .price__value {
     font-size: 42px;
+  }
+  .meet__info {
+    margin-bottom: 40px;
+  }
+  .meet__item_big {
+    margin-bottom: 40px;
+    width: 47%;
+  }
+  .meet__subtitle {
+    font-size: 20px;
   }
 }
 @media (max-width: 1080px) {
@@ -2360,9 +2366,6 @@ body {
     margin-top: 25px;
     width: 65%;
   }
-  .exp {
-    margin-top: 90px;
-  }
   .exp__box {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -2484,6 +2487,24 @@ body {
   }
   .price__item_center {
     padding: 80px;
+  }
+  .meet__items {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .meet__info {
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    margin-bottom: 25px;
+  }
+  .meet__item {
+    margin-top: 25px;
+    width: 90%;
+  }
+  .meet__item_big {
+    margin-bottom: 0;
   }
 }
 @media (max-width: 850px) {
@@ -2621,6 +2642,9 @@ body {
     bottom: 0;
     left: 0;
   }
+  .services__info .btn {
+    font-size: 16px;
+  }
   .services__item {
     margin-top: 40px;
     padding: 35px 25px 54px;
@@ -2710,9 +2734,6 @@ body {
   }
   .exp__items {
     margin-top: 15px;
-  }
-  .exp__item {
-    margin-top: 20px;
   }
   .exp__icon {
     width: 48px;
@@ -2847,6 +2868,9 @@ body {
     padding-top: 0;
     width: 100%;
   }
+  .services__info .btn {
+    font-size: 14px;
+  }
   .services__items {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
@@ -2875,6 +2899,34 @@ body {
   .price .btn {
     font-size: 14px;
   }
+  .meet {
+    margin-top: 70px;
+  }
+  .meet__info {
+    margin-bottom: 15px;
+  }
+  .meet__list li {
+    margin-top: 15px;
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .meet__item {
+    padding: 20px;
+  }
+  .meet__icon {
+    width: 48px;
+    height: 48px;
+  }
+  .meet__icon img {
+    width: 25px;
+  }
+  .meet__subtitle {
+    font-size: 16px;
+  }
+  .meet__text {
+    font-size: 14px;
+    line-height: 22px;
+  }
 }
 @media (max-width: 450px) {
   .services__item {
@@ -2883,6 +2935,9 @@ body {
   }
   .price__item {
     padding: 40px;
+    width: 100%;
+  }
+  .meet__item {
     width: 100%;
   }
 }
